add style sheet

--- a/frist-website-repo/index.html
+++ b/frist-website-repo/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first Github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello mama how are you</h1>
     <h2>Shakib how are you</h2>
-    <h3>Hello every body</h3>
+    <h3>Hello every body</h3> 
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil harum earum perspiciatis! Dolore enim tempora animi deleniti est at consequatur assumenda dolorem odit debitis minus a, excepturi sed exercitationem recusandae.</p>
 </body>
 </html>
